--- a/output.css
+++ b/output.css
@@ -556,12 +556,16 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mt-5{
-  margin-top: 1.25rem;
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
-.mt-10{
-  margin-top: 2.5rem;
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
 }
 
 .flex{
@@ -572,16 +576,28 @@ video {
   height: 12rem;
 }
 
+.h-1\/2{
+  height: 50%;
+}
+
 .w-48{
   width: 12rem;
+}
+
+.max-w-48{
+  max-width: 12rem;
 }
 
 .max-w-6xl{
   max-width: 72rem;
 }
 
-.max-w-48{
-  max-width: 12rem;
+.max-w-4xl{
+  max-width: 56rem;
+}
+
+.max-w-2xl{
+  max-width: 42rem;
 }
 
 .basis-1\/2{
@@ -612,6 +628,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-around{
+  justify-content: space-around;
+}
+
 .gap-16{
   gap: 4rem;
 }
@@ -624,12 +644,24 @@ video {
   gap: 2rem;
 }
 
+.gap-32{
+  gap: 8rem;
+}
+
+.gap-64{
+  gap: 16rem;
+}
+
 .rounded{
   border-radius: 0.25rem;
 }
 
 .rounded-xl{
   border-radius: 0.75rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .border-2{
@@ -639,6 +671,11 @@ video {
 .border-blue{
   --tw-border-opacity: 1;
   border-color: rgb(56 130 246 / var(--tw-border-opacity));
+}
+
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(249 250 248 / var(--tw-border-opacity));
 }
 
 .bg-blue{
@@ -681,8 +718,57 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-40{
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-16{
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.px-32{
+  padding-left: 8rem;
+  padding-right: 8rem;
+}
+
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
 .text-center{
   text-align: center;
+}
+
+.text-right{
+  text-align: right;
 }
 
 .text-2xl{
@@ -705,8 +791,29 @@ video {
   line-height: 1.75rem;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-extrabold{
   font-weight: 800;
+}
+
+.font-light{
+  font-weight: 300;
+}
+
+.font-normal{
+  font-weight: 400;
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
+.italic{
+  font-style: italic;
 }
 
 .text-dark{
@@ -722,4 +829,18 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(249 250 248 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px){
+  .md\:h-48{
+    height: 12rem;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:flex-col{
+    flex-direction: column;
+  }
 }
